@startuml

!theme plain
hide circle
skinparam linetype ortho

header Architecture Données - MenuLink
title MCD / MPD (Mongoose Schemas)

' --- ENTITÉS (MPD) ---

package "Gestion Restaurant" {
    
    entity "User" as user {
        * _id : ObjectId
        --
        name : String
        email : String <U>
        password_hash : String
        role : "PERSONNEL" | "GESTIONNAIRE" | "CLIENT"
        created_at : Date
    }

    entity "Menu" as menu {
        * _id : ObjectId
        --
        nom : String
        actif : Boolean
        --
        * gestionnaire_id : ObjectId <<FK>>
    }

    entity "Category" as category {
        * _id : ObjectId
        --
        nom : String
        ordre_affichage : Number
        --
        * menu_id : ObjectId <<FK>>
    }

    entity "Dish (Plat)" as dish {
        * _id : ObjectId
        --
        nom : String
        description : String
        prix : Number
        disponible : Boolean
        image_url : String
        --
        * categorie_id : ObjectId <<FK>>
    }
}

package "Salle & Clients" {

    entity "Table" as table {
        * _id : ObjectId
        --
        numero : Number
        qr_code : String <U>
        active : Boolean
    }

    entity "ClientSession" as session {
        * _id : ObjectId
        --
        session_id : UUID <U>
        started_at : Date
        --
        * table_id : ObjectId <<FK>>
    }
}

' --- RELATIONS (MLD/MCD) ---

' Un User gère plusieurs Menus (1,n)
user "1" ||..o{ "0..n" menu : "Gère"

' Un Menu contient plusieurs Catégories (1,n)
menu "1" ||..|{ "1..n" category : "Contient"

' Une Catégorie contient plusieurs Plats (1,n)
category "1" ||..|{ "0..n" dish : "Possède"

' Une Table peut avoir plusieurs Sessions (historique)
table "1" ||..o{ "0..n" session : "Accueille"

note right of session
  Session active créée
  via scan QR Code
end note

@enduml
